--- a/saibamais.html
+++ b/saibamais.html
@@ -40,7 +40,7 @@
                 <ul>
                     <a href="https://youtu.be/8mBWE--T9yQ"><li>Livro infantil - ingles</li></a>
                     <a href="https://www.saude.gov.br/images/mp4/2020/April/15/V--deo-Crian--as--Vers--o-leve.mp4"><li>Video para explicar a importância do isolamento</li></a>
-                    <a href="http://www.crianca.mppr.mp.br/arquivos/File/legis/covid19/dicas_de_brincadeiras_covid19.pdf"><li>Dicas de atividades com crianças durante a quarentena</li></a>
+                    <a href="http://www.crianca.mppr.mp.br/arquivos/File/legis/covid19/dicas_de_brincadeiras_covid19.pdf"><li>Dicas de atividades para a quarentena</li></a>
                 </ul>
             </div>
         </div>
