update contato responsive
update contato responsive

--- a/contato.html
+++ b/contato.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="shortcut icon" href="imagens/icon.png"/>
     <title>Uma luz na Quarentena - covid19✨</title>
     <link rel="stylesheet" href="estilocontato.css" />
