update sobre html responsive
update sobre html responsive

--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="shortcut icon" href="imagens/icon.png"/>
     <title>Uma luz na Quarentena - covid19✨</title>
     <link rel="stylesheet" href="estilosobre.css" />
@@ -19,7 +21,7 @@
     </div>  
     <div id="conteudo"> 
         <div id="sobre">
-            <div id="minhaImg"><img class="foto" src="imagens/eu.PNG"/></div>
+            <div id="minhaImg"><img class="foto" src="imagens/eu.PNG" style="width:100%;height:auto;"/></div>
             <div id="textsobre">
                 <h2>Sobre Thalita Colofatti</h2>
                 <p>Sou iniciante na área de Desenvolvimento de Sistemas. Minha trajetória profissional iniciou nas artes, tenho formação em Arquitetura e urbanismo e 
@@ -35,12 +37,12 @@
                 </p>
                 <p><h5>Para acompanhar outros trabalhos, é só clicar nos icones abaixo:</h5></p>
                 <div class="redessociais">
-                    <a href="https://www.linkedin.com/in/thalitaacb/"><img class="icones" src="imagens/LN100.png"/></a>
-                    <a href="https://github.com/thalitacolofatti"><img class="icones" src="imagens/GitHub-Mark.png"/></a>
-                    <a href="https://www.behance.net/thalitacolofatti"><img class="icones" src="imagens/behance100.png"/></a>
-                    <a href="https://www.instagram.com/filoactto/"><img class="icones" src="imagens/iG100.png"/></a>
-                    <a href="https://vimeo.com/thalitacolofatti/"><img class="icones" src="imagens/vimeo_icon_white.jpg"/></a>
-                    <a href="https://sketchfab.com/thalitacolofatti"><img class="icones" src="imagens/logo-black_sketchfab.png"/></a>
+                    <a href="https://www.linkedin.com/in/thalitaacb/"><img class="icones" src="imagens/LN100.png" style="width:100%;height:auto;"/></a>
+                    <a href="https://github.com/thalitacolofatti"><img class="icones" src="imagens/GitHub-Mark.png" style="width:100%;height:auto;"/></a>
+                    <a href="https://www.behance.net/thalitacolofatti"><img class="icones" src="imagens/behance100.png" style="width:100%;height:auto;"/></a>
+                    <a href="https://www.instagram.com/filoactto/"><img class="icones" src="imagens/iG100.png" style="width:100%;height:auto;"/></a>
+                    <a href="https://vimeo.com/thalitacolofatti/"><img class="icones" src="imagens/vimeo_icon_white.jpg" style="width:100%;height:auto;"/></a>
+                    <a href="https://sketchfab.com/thalitacolofatti"><img class="icones" src="imagens/logo-black_sketchfab.png" style="width:100%;height:auto;"/></a>
                 </div>
             </div>
         </div>
