update responsive design

--- a/saibamais.html
+++ b/saibamais.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="imagens/icon.png"/>
     <title>Uma luz na Quarentena - covid19✨</title>
@@ -14,10 +14,10 @@
         <h1>Uma luz na Quarentena - Notícias</h1>
     </div>
     <div id="navbar">
-        <div><a class="nav" href="index.html"><h2><b>Home</b></h2></a></div>
-        <div><a class="nav" href="sobre.html"><h2><b>Sobre</b></h2></a></div>
-        <div><a class="nav" href="contato.html"><h2><b>Contato</b></h2></a></div>
-        <div><a class="nav" href="saibamais.html"><h2><b>Saiba mais</b></h2></a></div>
+        <div><a href="index.html"><h2><b>Home</b></h2></a></div>
+        <div><a href="sobre.html"><h2><b>Sobre</b></h2></a></div>
+        <div><a href="contato.html"><h2><b>Contato</b></h2></a></div>
+        <div><a href="saibamais.html"><h2><b>Saiba mais</b></h2></a></div>
     </div>  
     <div id="conteudo"> 
         <div id="maislinks">
