--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="imagens/icon.png"/>
     <title>Uma luz na Quarentena - covid19✨</title>
@@ -37,12 +37,12 @@
                 </p>
                 <p><h5>Para acompanhar outros trabalhos, é só clicar nos icones abaixo:</h5></p>
                 <div class="redessociais">
-                    <a href="https://www.linkedin.com/in/thalitaacb/"><img class="icones" src="imagens/LN100.png" style="width:100%;height:auto;"/></a>
-                    <a href="https://github.com/thalitacolofatti"><img class="icones" src="imagens/GitHub-Mark.png" style="width:100%;height:auto;"/></a>
-                    <a href="https://www.behance.net/thalitacolofatti"><img class="icones" src="imagens/behance100.png" style="width:100%;height:auto;"/></a>
-                    <a href="https://www.instagram.com/filoactto/"><img class="icones" src="imagens/iG100.png" style="width:100%;height:auto;"/></a>
-                    <a href="https://vimeo.com/thalitacolofatti/"><img class="icones" src="imagens/vimeo_icon_white.jpg" style="width:100%;height:auto;"/></a>
-                    <a href="https://sketchfab.com/thalitacolofatti"><img class="icones" src="imagens/logo-black_sketchfab.png" style="width:100%;height:auto;"/></a>
+                    <a href="https://www.linkedin.com/in/thalitaacb/"><img class="icones" src="imagens/LN100.png"/></a>
+                    <a href="https://github.com/thalitacolofatti"><img class="icones" src="imagens/GitHub-Mark.png"/></a>
+                    <a href="https://www.behance.net/thalitacolofatti"><img class="icones" src="imagens/behance100.png"/></a>
+                    <a href="https://www.instagram.com/filoactto/"><img class="icones" src="imagens/iG100.png"></a>
+                    <a href="https://vimeo.com/thalitacolofatti/"><img class="icones" src="imagens/vimeo_icon_white.jpg"/></a>
+                    <a href="https://sketchfab.com/thalitacolofatti"><img class="icones" src="imagens/logo-black_sketchfab.png"/></a>
                 </div>
             </div>
         </div>
