--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="imagens/icon.png"/>
     <title>Uma luz na Quarentena - covid19✨</title>
@@ -22,7 +22,7 @@
 
     <div id="conteudo"> 
       <div id="formulario">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScYFWVV4ZpTCq2-uvJUoDa_rfvF5XHPSuPzY8Je7akUb6AqUA/viewform?embedded=true" width="640" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScYFWVV4ZpTCq2-uvJUoDa_rfvF5XHPSuPzY8Je7akUb6AqUA/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
 
