--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         </div>
         <div id="videos">
             <div class="videoDestaque">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/b-xvUvusaZQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/b-xvUvusaZQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="descVideo">A arte e a quarentena</p>
             </div>
             <div class="videoDestaque">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/DevnuL7g2V0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/DevnuL7g2V0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="descVideo">A polícia colombiana e a quarentena</p>
             </div>
         </div>
