--- a/sobre.html
+++ b/sobre.html
@@ -33,7 +33,7 @@
 
                 <p>Atualmente, estou aprendendo desenvolvimento de software em Python, GIT e desenvolvimento web (HTML, CSS e Bootstrap).
                 O aprendizado web e GIT são facilitados pela Gama Academy que foi a incentivadora da criação deste site de notícias 
-                sobre o Covid - 19, através de seus desafios no curso Hiring Coders.
+                sobre a Covid - 19, através de seus desafios no curso Hiring Coders.
                 </p>
                 <p><h5>Para acompanhar outros trabalhos, é só clicar nos icones abaixo:</h5></p>
                 <div class="redessociais">
