--- a/saibamais.html
+++ b/saibamais.html
@@ -51,7 +51,7 @@
                 <h3>Para entender melhor sobre a Covid-19</h3>
                 <ul>
                     <a href="https://www.youtube.com/watch?v=X_HC8aCrHdA"><li>Como são os sintomas da Covid-19?</li></a>
-                    <a href="https://www.saude.gov.br/images/mp4/2020/marco/18/Filme-PREVENCAO-30-segundos.mp4"><li>Como se prevenção</li></a>
+                    <a href="https://www.saude.gov.br/images/mp4/2020/marco/18/Filme-PREVENCAO-30-segundos.mp4"><li>Como se prevenir</li></a>
                     <a href="https://www.youtube.com/watch?v=x-Pn2W8AHF4"><li>Porque isolar?</li></a>
                     <a href="https://www.youtube.com/watch?v=uRAvkGdhOWA"><li>Como limpar superfícies e objetos?</li></a>
                     <a href="https://www.youtube.com/watch?v=EMi6zf64mSA"><li>Cenários para o fim da pandemia</li></a>
