--- a/saibamais.html
+++ b/saibamais.html
@@ -26,7 +26,7 @@
                 <ul>
                     <a href="https://thegoodnewscoronavirus.com/"><li>The Good News Coronavirus</li></a>
                     <a href="https://www.youtube.com/results?search_query=coronavirus"><li>Youtube - busca por Corona Virus</li></a>
-                    <a href="https://www.who.int/"><li>World health</li></a>
+                    <a href="https://www.who.int/"><li>World health Organization</li></a>
                     </ul>
             </div>
             <div id="listas">
@@ -40,7 +40,7 @@
             <div id="listas">
                 <h3>Para crianças</h3>
                 <ul>
-                    <a href="https://youtu.be/8mBWE--T9yQ"><li>Livro infantil - ingles</li></a>
+                    <a href="https://youtu.be/8mBWE--T9yQ"><li>Livro infantil - em inglês</li></a>
                     <a href="https://www.saude.gov.br/images/mp4/2020/April/15/V--deo-Crian--as--Vers--o-leve.mp4"><li>Video para explicar a importância do isolamento</li></a>
                     <a href="http://www.crianca.mppr.mp.br/arquivos/File/legis/covid19/dicas_de_brincadeiras_covid19.pdf"><li>Dicas de atividades para a quarentena</li></a>
                 </ul>
