--- a/sobre.html
+++ b/sobre.html
@@ -23,19 +23,18 @@
         <div id="sobre">
             <div id="minhaImg"><img class="foto" src="imagens/eu.PNG" style="width:100%;height:auto;"/></div>
             <div id="textsobre">
-                <h2>Sobre Thalita Colofatti</h2>
-                <p>Sou iniciante na área de Desenvolvimento de Sistemas. Minha trajetória profissional iniciou nas artes, tenho formação em Arquitetura e urbanismo e 
+                <h2>Sobre Thalita</h2>
+                <p>Trabalho na área de Desenvolvimento de Sistemas. Minha trajetória profissional iniciou nas artes, tenho formação em Arquitetura e urbanismo e 
                 em Computação Gráfica com ênfase em ilustração digital, motion design e desenvolvimento de jogos. 
-                Trabalhei na área por um tempo. Enquanto fazia esse curso de CG, conheci a programação e me identifiquei mais.
-                Hoje, estudo Análise e Desenvolvimento de Sistemas na FATEC SP.</p>
+                Trabalhei na área por um tempo. Enquanto fazia o curso de CG, conheci a programação e me identifiquei.
+                Hoje, sou formada em Análise e Desenvolvimento de Sistemas na FATEC SP.</p>
 
                 <p>Participei em grupo como artista 2D da Game Jam da Tech Week de 2019. O desafio era criar um jogo para incentivar as visitas ao Museu Catavento de São Paulo.</p>
 
-                <p>Atualmente, estou aprendendo desenvolvimento de software em Python, GIT e desenvolvimento web (HTML, CSS e Bootstrap).
-                O aprendizado web e GIT são facilitados pela Gama Academy que foi a incentivadora da criação deste site de notícias 
-                sobre a Covid - 19, através de seus desafios no curso Hiring Coders.
+                <p>Trabalho com desenvolvimento de software em Python, GIT e desenvolvimento web (HTML, CSS, Javascript e Bootstrap).
+                A Gama Academy foi a incentivadora da criação deste site de notícias sobre a Covid - 19, através de seus desafios no curso Hiring Coders.
                 </p>
-                <p><h5>Para acompanhar outros trabalhos, é só clicar nos icones abaixo:</h5></p>
+                <!--<p><h5>Para acompanhar outros trabalhos, é só clicar nos icones abaixo:</h5></p>
                 <div class="redessociais">
                     <a href="https://www.linkedin.com/in/thalitaacb/"><img class="icones" src="imagens/LN100.png"/></a>
                     <a href="https://github.com/thalitacolofatti"><img class="icones" src="imagens/GitHub-Mark.png"/></a>
@@ -43,7 +42,7 @@
                     <a href="https://www.instagram.com/filoactto/"><img class="icones" src="imagens/iG100.png"></a>
                     <a href="https://vimeo.com/thalitacolofatti/"><img class="icones" src="imagens/vimeo_icon_white.jpg"/></a>
                     <a href="https://sketchfab.com/thalitacolofatti"><img class="icones" src="imagens/logo-black_sketchfab.png"/></a>
-                </div>
+                </div>-->
             </div>
         </div>
 
